        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=13690
        JavaScript Form Validation issue on Banco do Brasil site

        Test: fast/forms/input-setvalue-selection.html

        * html/HTMLInputElement.cpp:
        (WebCore::HTMLInputElement::setValue): In other browsers, changing textInput.value
        always moves the insertion point past the text. In 10.4.9 WebKit, this only worked
        for inactive controls, and it never worked in ToT.



Canonical link: https://commits.webkit.org/17892@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21448 268f45cc-cd09-0410-ab3c-d52691b4dbfc